# archive

./: README.md  le_auto_update.py
QBP/: README.md  requirements.txt  wsgi.py
QBP/project/: email_templates.py  settings.py  urls.py  utils.py  views.py
ROAA/: requirements.txt  wsgi.py
ROAA/project/: constants.cpp  constants.py  settings.py  urls.py  utils.py
ROAA/templates/: activate.html  activate_successfully.html  base.html  error_404.html  recover.html  recover_successfully.html  reset.html  reset_successfully.html
ROAA/tools/: create.py  defines.xml
ROAF/: README.md
ROAF/custom/: s3.patch
ROAF/project/: settings.py  urls.py  utils.py
ROAG/: README.md  asgi.py  django.ini  manage.py  nginx.conf  requirements.txt  wsgi.py  wsgi_socket.py
ROAG/project/: celery.py  routing.py  utils.py
ROAG/templates/: index_live.html  index_stage.html  stats.html  stats2.html  testing.html  update.html
ROAG/tools/: qb-karma.conf.js  qb-protractor.conf.js
ROAI/: CREDITS  README  roainstaller.pro
ROAI/resources/: res.qrc
ROAI/src/: roainstaller.rc
ROAII/: configfile.cpp  configfile.h  constants.h  interface.cpp  interface.h  interface.ui  interfacesettings.cpp  interfacesettings.h  interfacesettings.ui  jsonrequest.cpp  jsonrequest.h  logger.cpp  logger.h  main.cpp  qbinterface.pro  res.qrc  sharedobject.h  socketconnector.cpp  socketconnector.h  socketmanager.cpp  socketmanager.h  tcpconnection.h  terminalinterface.cpp  terminalinterface.h  threadmanager.cpp  threadmanager.h
ROAII/certs/: ca.pem  class2.pem
ROAJ/: index.html
ROAJ/data/: angular-animate.min.js  angular-aria.min.js  angular-material.min.js  jquery.min.js
ROAL/: CREDITS  README.md  ROALauncher.pro
ROAL/resources/: res.qrc
ROAP/: manage.py  wsgi.py
ROAP/project/: urls.py  utils.py  views.py
ROAP/tools/: createGui.py
ROAU/QBNet/: Client.cpp  Client.h  (+8 more)
ROAU/QBNet/samples/client/: CMakeLists.txt  main.cpp
ROAU/QBNet/samples/client_login_no_encryption/: CMakeLists.txt  main.cpp
ROAU/QBNet/samples/protobuf/: CMakeLists.txt  main.cpp  test.pb.cc  test.pb.h
ROAU/QBNet/samples/server/: CMakeLists.txt  main.cpp
django-cloud-update/: README.md  setup.py
django-global-config/: README.md  setup.py
django-health-checks/: README.md  setup.py
django-stackdriver-logging/: README.md  setup.py
(+453 files in other folders)
